examples/kubeflow-mlops/kubeflow-manifests/tests/unit-tests/awsconfigs/common/aws-authservice/base/test_data/expected/networking.istio.io_v1alpha3_virtualservice_authservice-web-cognito.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authservice-web-cognito
  namespace: istio-system
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /logout
    route:
    - destination:
        host: aws-authservice.istio-system.svc.cluster.local
        port:
          number: 8082
