examples/kubeflow-mlops/kubeflow-manifests/tests/unit-tests/awsconfigs/common/aws-authservice/base/test_data/expected/~g_v1_service_aws-authservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-authservice
  namespace: istio-system
spec:
  ports:
  - name: aws-authservice
    port: 8082
    targetPort: http-api
  selector:
    app: aws-authservice
  type: ClusterIP
